syntax = "proto3";

option java_package = "ma.slimanimustapha.registrationservice.web.grpc.stubs";

service OwnerService {
  // Owner operations
  rpc getOwners(Empty) returns (OwnerList);
  rpc getOwner(OwnerId) returns (Owner);
  rpc saveOwner(OwnerRequest) returns (Owner);
  rpc updateOwner(OwnerUpdateRequest) returns (Owner);
  rpc deleteOwner(OwnerId) returns (Empty);

  // Vehicule operations
  rpc getVehicules(Empty) returns (VehiculeList);
  rpc getVehicule(VehicleId) returns (Vehicule);
  rpc saveVehicule(VehiculeRequest) returns (Vehicule);
  rpc updateVehicule(VehiculeUpdateRequest) returns (Vehicule);
  rpc deleteVehicule(VehicleId) returns (Empty);
}

message OwnerUpdateRequest{
  int32 id = 1;
  string name = 2;
  string birthDate = 3;
  string email = 4;
}

message VehiculeUpdateRequest{
  int32 id = 1;
  string regNumber = 2;
  string brand = 3;
  float fiscalPower = 4;
  string model = 5;
}

message OwnerId{
  int32 id = 1;
}

message VehicleId{
  int32 id = 1;
}

message OwnerRequest {
  string name = 1;
  string email = 3;
  string birthDate = 2;
}

message VehiculeRequest {
  string regNumber = 1;
  string brand = 2;
  float fiscalPower = 3;
  string model = 4;
}

message Empty{}

message OwnerList {
  repeated Owner owners = 1;
}

message VehiculeList{
  repeated Vehicule vehicules = 1;
}

message Owner {
  int32 id = 1;
  string name = 2;
  string birthDate = 3;
  string email = 4;
  repeated Vehicule vehicules = 5;
}

message Vehicule{
  int32 id = 1;
  string regNumber = 2;
  string brand = 3;
  float fiscalPower = 4;
  string model = 5;
  Owner owner = 6;
}